--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -50,6 +50,9 @@
     <ClCompile Include="leetcode\src\ArrayFindAllNumbersDisappearedInArray.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="leetcode\src\ImplementQueueUsingStack.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="leetcode\src\LinkedListCycleII.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
