add 20 Valid Parentheses

--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -71,6 +71,9 @@
     <ClCompile Include="leetcode\src\TwoSumII.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="leetcode\src\ValidParentheses.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="testcase\leetcode_test.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">leetcode\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
