move leetcode_test.cpp to testcase folder

--- a/LeetCode.vcxproj
+++ b/LeetCode.vcxproj
@@ -77,7 +77,7 @@
     <ClCompile Include="leetcode\src\ValidParentheses.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="testcase\leetcode_test.cpp">
+    <ClCompile Include="testcase\src\leetcode_test.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">leetcode\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
